[package]
name = "hint_solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.2", features = ["extension-module"] }
num-complex = "0.4.4"
rayon = "1.8.1"
rustfft = "6.2.0"
num = "0.4.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
